--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: 'fromFile'
+    versionSpec: '18.x'
   displayName: 'Install Node.js'
 
 - script: |
