--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ steps:
     npm install
     npm run build
   displayName: 'npm install and build'
+
 - task: ArchiveFiles@2
   inputs:
     rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
@@ -32,3 +33,9 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
     artifactName: 'drop'
     publishLocation: 'Container'
+
+
+- task: AzureStaticWebApp@0
+  inputs:
+    app_location: '/'
+    azure_static_web_apps_api_token: 'ecf5c89a04836c78f7dacb3a67cd9ce6af4ac4c270a7dd0522d0196413b3724b3-7975c35d-a0df-4230-acab-a987a7abea83003250307'
