--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,5 +37,5 @@ steps:
 
 - task: AzureStaticWebApp@0
   inputs:
-    app_location: '/'
+    app_location: '/dist/'
     azure_static_web_apps_api_token: 'ecf5c89a04836c78f7dacb3a67cd9ce6af4ac4c270a7dd0522d0196413b3724b3-7975c35d-a0df-4230-acab-a987a7abea83003250307'
