--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "flux-web-app",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "flux_visitor_app",
+  "version": "1.0.0",
+  "description": "TODO: Give a short introduction of your project. Let this section explain the objectives or the motivation behind this project.",
+  "main": "app.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "test": "node ./tests/submit.js",
+    "start": "nodemon app.js",
+    "lint": "eslint .",
+    "format": "prettier --write ."
   },
+  "repository": {
+    "type": "git",
+    "url": "https://EngageWorksDev@dev.azure.com/EngageWorksDev/Flux%20Visitor%20App/_git/Flux_Visitor_App"
+  },
+  "author": "Farhad Agzamov",
+  "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.45.1"
+    "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jsforce": "^1.11.1",
+    "pug": "^3.0.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.45.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "nodemon": "^3.0.1",
+    "prettier": "^3.0.0"
   }
 }
