--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .  --fix",
     "format": "prettier --write .",
-    "dev": "concurrently --kill-others \"node app.js\" \"browser-sync start --proxy 'localhost:3000' --files 'public,views'\"",
+    "dev": "node app.js browser-sync start --proxy 'localhost:3000' --files 'public,views'",
     "start": "node app.js"
   },
   "repository": {
@@ -23,7 +23,6 @@
   "homepage": "https://github.com/Komsomol/AlyaAI#readme",
   "devDependencies": {
     "browser-sync": "^2.29.3",
-    "concurrently": "^8.2.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
@@ -36,6 +35,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "ip": "^1.1.8",
     "jsforce": "^1.11.1",
     "openai": "^3.3.0",
     "pug": "^3.0.2"
